# pirouter

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  package-lock.json  package.json  version-control.json
scripts/: build-installer.ps1  build.ps1  install-service.ps1  uninstall-service.ps1
src/: config.rs  lib.rs  main.rs  server.rs  types.rs
src/ledger/: mod.rs  schema.sql
src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src/router/: cascade.rs  mod.rs  policy.rs  rules.rs
tests/: ledger_smoke.rs  routing_smoke.rs
tray_app/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
tray_app/src/: App.css  index.css
tray_app/src-tauri/: Cargo.toml  tauri.conf.json
tray_app/src-tauri/src/: main.rs
tray_app/src/api/: pirouter.ts
tray_app/src/components/: LedgerDrawer.tsx  SaveBar.tsx  SectionShell.tsx  StatusBadge.tsx  StatusOrb.tsx  TopHeader.tsx
tray_app/src/components/ui/: sidebar.tsx
tray_app/src/hooks/: useCopy.ts
tray_app/src/pages/: Home.tsx
tray_app/src/sections/: DaemonSection.tsx  ModelsSection.tsx  ProvidersSection.tsx  RecentActivitySection.tsx  RoutingProfileSection.tsx  RulesSection.tsx
