[package]
name = "pirouter"
version = "0.1.0"
edition = "2021"
authors = ["pirouter contributors"]
license = "Apache-2.0"
description = "Lightweight LLM-routing daemon. OpenAI-compatible proxy with declarative rules and cascade fallback."
repository = "https://github.com/riverho/pirouter"
readme = "README.md"
keywords = ["llm", "router", "proxy", "anthropic", "openai"]
categories = ["command-line-utilities", "web-programming::http-server"]

[[bin]]
name = "pirouter"
path = "src/main.rs"

[lib]
name = "pirouter"
path = "src/lib.rs"

[dependencies]
# Async runtime + HTTP server
tokio = { version = "1.38", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }

# CLI + config
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
anyhow = "1"
ulid = { version = "1.1", features = ["serde"] }
regex = "1.10"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
