[package]
name = "pirouter-gui"
version = "0.1.0"
description = "Desktop control surface for the pirouter daemon"
authors = ["pirouter contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
pirouter = { path = "../.." }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tauri = { version = "2", features = ["tray-icon"] }
tokio = { version = "1", features = ["process", "time"] }
